# ggml-tutorial

./: README.md
mnist-torch/: CMakeLists.txt  README.md  convert-pth-to-ggml.py  main-torch.cpp  train.py
mnist-torch-cnn/: CMakeLists.txt  convert-pth-to-ggml.py  gen_img.py  main-cnn.cpp  train.py
mnist-torch-cnn/model/: mnist-cnn-ggml-model-f32.gguf  mnist_model.pth
mnist-torch/model/: mnist_model.pth
